1. Reactive MongoDB → 同步驱动   - synapse-kb-adapter/pom.xml：替换 spring-boot-starter-data-mongodb-reactive   为同步驱动   - DocumentMongoRepository、KnowledgeBaseMongoRepository：ReactiveMongoRepository →   MongoRepository   - MongoDocumentRepository、MongoKnowledgeBaseRepository：移除所有 .block() /   .toStream() 调用   - SynapseKbBootstrapApplication：添加 @EnableMongoRepositories，排除 reactive   auto-config   - application.yaml：添加 spring.data.mongodb.repositories.type=imperative
  2. 消除 ChunkSearchResult 重复 + Query 类型修正
  - 删除 ChunkSearchResult.java（与 ChunkReference 完全重复）
  - VectorStorePort.search() 返回类型改为 List<ChunkReference>
  - Query.knowledgeBaseId 从 String 改为 KnowledgeBaseId 值对象
  - 级联更新
  MilvusVectorStoreAdapter、KnowledgeBaseApplicationService、StreamingQueryController

  3. Document 充血模型硬化
  - 删除裸 setFailureReason(String) setter
  - 添加 transitionTo(DocumentStatus, String failureReason) 重载，仅 FAILED
  状态可设原因
  - KnowledgeBaseApplicationService.processDocument() catch 块简化为一行调用

  4. 资源与线程修复
  - 删除 KnowledgeBaseApplicationService 中未使用的 processDocument(DocumentId) 死代码
  - OllamaStreamingLlmAdapter：new Thread() → Thread.ofVirtual().name(...).start(...)
  - ApacheTikaDocumentParserAdapter：try (InputStream) 确保流关闭

  5. 安全与依赖清理
  - WebCorsConfig：setAllowCredentials(true) → false，消除 * + credentials 安全反模式
  - synapse-kb-adapter/pom.xml：删除未使用的 langchain4j-milvus 依赖

  6. 分页与事务支持
  - KnowledgeBaseRepository、DocumentRepository：添加 findAll(page, size) /
  findByKnowledgeBaseId(kbId, page, size)
  - MongoKnowledgeBaseRepository、MongoDocumentRepository：PageRequest.of() 实现分页
  - ListKnowledgeBaseUseCase、ListDocumentUseCase：扩展分页接口
  - KnowledgeBaseController、DocumentController：@RequestParam(defaultValue="0") int
  page、@RequestParam(defaultValue="20") int size
  - KnowledgeBaseApplicationService.delete(KnowledgeBaseId)：添加 @Transactional

  7. 文档更新
  - ARCHITECTURE.md：同步驱动说明、值对象表格、transitionTo 重载、虚拟线程、CORS
  安全、事务说明
  - API.md：分页查询参数、CORS 配置说明